# stone

./: CMakeLists.txt  README.md  SPEC.md  TODO.txt
cmake/modules/: StoneConfig.cmake.in  StoneCore.cmake  StoneFormat.cmake  StoneProperties.cmake  StoneTests.cmake
include/stone/: CMakeLists.txt  DiagClient.def  Diagnostic.def  ExecuteFrontend.h  Lexer.h  Main.h  Public.h  Semantics.h  SubSys.h  SubSystem.h
include/stone/Analysis/: Analysis.h  AnalysisOptions.h  Analyze.h  Checker.h  CheckerDiagnostic.h  Confusable.h  Lexer.h  LexerDiagnostic.h  Ownership.h  Parse.h  Parser.h  ParserDiagnostic.h  Semantics.h  SpecifierContext.h
include/stone/Analyze/: Analysis.h  Analyze.h  AnalyzeOptions.h  Analyzer.h  Check.h  Checker.h  CheckerDiagnostic.h  Confusable.h  Lexer.h  LexerDiagnostic.def  LexerDiagnostic.h  Ownership.h  Parse.h  Parser.h  ParserDiagnostic.h  SpecifierContext.h  Token.h  TokenKind.def  TokenKind.h  Trivia.h
include/stone/Basic/: Diagnostics.h  FileMgr.h  FileSystemOptions.h  FileSystemStatCache.h  SourceManager.h  SourceManagerInternals.h  SrcLoc.h  SrcMgr.h  SrcMgrInternals.h
include/stone/Compile/: Analysis.h  AnalysisOptions.h  Backend.h  Check.h  Checker.h  CheckerDiagnostic.h  Compile.h  CompileFile.h  CompileOptions.h  CompileUnit.h  Compiler.h  Confusable.h  Frontend.h  Gen.h  GenOptions.h  Lexer.h  LexerDiagnostic.h  Ownership.h  Parse.h  Parser.h  ParserDiagnostic.h  SpecifierContext.h  Token.h  Transformer.h  Trivia.h
include/stone/Compiler/: AST.h  Source.h
include/stone/Core/: AST.h  ASTContext.h  ASTContextAlloc.h  ASTCtx.h  ASTCtxAlloc.h  ASTFile.h  ASTListener.h  ASTNode.h  ASTScope.h  ASTVisitor.h  ASTWalker.h  Builtin.h  BumpTable.h  Char.h  Comment.h  Context.h  Decl.def  Decl.h  DeclBitfields.h  DeclBits.h  DeclContext.h  DeclCtx.h  DeclKind.def  DeclKind.h  DeclName.h  Defer.h  Diag.h  DiagnosticOptions.h  Diagnostics.h  Expr.h  ExprBitfields.h  ExprKind.h  FileMgr.h  FileSystem.h  FileSystemOptions.h  FileSystemStatCache.h  Fmt.h  Identifier.h  IdentifierTable.h  LLVM.h  (+30 more)
include/stone/Driver/: Activity.h  Compilation.h  CompilationTool.h  CrashCondition.h  Driver.h  DriverOptions.h  DriverProfile.h  Event.h  Job.h  JobQueue.h  LinkType.h  Process.h  ProcessQueue.h  Run.h  ToolChain.h
include/stone/Session/: BuildSystem.h  CMakeLists.txt  ExecutablePath.h  FileType.def  FileType.h  Mode.h  Options.h  Options.td  Session.h  SessionOptions.h
include/stone/System/: Action.h  ActionKind.def  ActionKind.h  BaseOptions.h  BasicOptions.h  BuildOptions.h  BuildProfile.h  Compilation.h  Compile.h  CompileFile.h  CompileOptions.h  CompileProcess.h  Compiler.h  CompilerAction.h  CompilerConsumer.h  CompilerFile.h  CompilerOptions.h  Crash.h  Driver.h  DriverOptions.h  DriverProfile.h  Event.h  ExecuteCompiler.h  ExecuteSystem.h  FileType.h  GenOptions.h  Help.h  Input.h  LinkProcess.h  Mode.h  Options.h  Options.td  Phase.h  Process.h  ProcessAction.h  ProcessQueue.h  Public.h  Run.h  Scheduler.h  Session.h  (+7 more)
lib/: CMakeLists.txt
lib/Analysis/: Analysis.cpp  Analyze.cpp  CMakeLists.txt  Check.cpp  Checker.cpp  Compile.cpp  Lexer.cpp  Parse.cpp  Parser.cpp
lib/Analysis/test/: CMakeLists.txt
lib/Analyze/: Analysis.cpp  Analyze.cpp  Analyzer.cpp  CMakeLists.txt  Check.cpp  Checker.cpp  Lexer.cpp  Parse.cpp  Parser.cpp  Token.cpp
lib/Analyze/test/: CMakeLists.txt  LexerTest.cpp
lib/Analyze/tests/: ParserTest.cpp
lib/Basic/: CMakeLists.txt  FileManager.cpp  FileMgr.cpp  FileSystemStatCache.cpp  SourceLocation.cpp  SourceManager.cpp  SrcLoc.cpp  SrcMgr.cpp
lib/Basic/test/: CMakeLists.txt  SrcMgrTest.cpp
lib/Compile/: Analysis.cpp  Backend.cpp  CMakeLists.txt  Check.cpp  Checker.cpp  Compile.cpp  CompileFile.cpp  Compiler.cpp  Gen.cpp  GenIR.cpp  Lexer.cpp  Optimize.cpp  Parse.cpp  Parser.cpp  Transformer.cpp
lib/Core/: ASTContext.cpp  ASTCtx.cpp  ASTScope.cpp  ASTVisitor.cpp  ASTWalker.cpp  Builtin.cpp  CMakeLists.txt  Char.cpp  Comment.cpp  Context.cpp  Decl.cpp  DeclContext.cpp  DeclCtx.cpp  Diag.cpp  Diagnostics.cpp  Expr.cpp  FileMgr.cpp  FileSystemStatCache.cpp  Fmt.cpp  Identifier.cpp  LLVMContext.cpp  LLVMCtx.cpp  Module.cpp  SrcFile.cpp  SrcLoc.cpp  SrcMgr.bak  SrcMgr.cpp  Stats.cpp  Stmt.cpp  Template.cpp  TextDiagnosticListener.cpp  TokenKind.cpp  Type.cpp  Version.cpp
lib/Core/test/: BuiltinTest.cpp  CMakeLists.txt  DiagTest.cpp  FileMgrTest.cpp  SrcMgrTest.cpp
lib/Core/tests/: CMakeLists.txt  DiagTest.cpp
lib/Driver/: Activity.cpp  Build.cpp  CMakeLists.txt  Compilation.cpp  CompilationTool.cpp  DarwinToolChain.cpp  Driver.cpp  Event.cpp  Job.cpp  JobQueue.cpp  Process.cpp  ProcessQueue.cpp  Run.cpp  ToolChain.cpp  UnixToolChain.cpp  WinToolChain.cpp
lib/Session/: CMakeLists.txt  FileType.cpp  Options.cpp  Session.cpp
lib/System/: Action.cpp  BuildProfile.cpp  Builder.cpp  CMakeLists.txt  Compilation.cpp  Compile.cpp  CompileFile.cpp  Compiler.cpp  CompilerAction.cpp  CompilerOptions.cpp  DarwinToolChain.cpp  Driver.cpp  Event.cpp  ExecuteCompiler.cpp  ExecuteSystem.cpp  FileType.cpp  Help.cpp  Main.cpp  Options.cpp  Phase.cpp  Process.cpp  ProcessAction.cpp  ProcessQueue.cpp  Run.cpp  Session.cpp  Step.cpp  System.cpp  SystemOptions.cpp  Task.cpp  ToolChain.cpp  UnixToolChain.cpp  WinToolChain.cpp
lib/System/test/: CMakeLists.txt
tests/syntax/: class.stone  for.stone  fun.stone  space.stone  use.stone
tests/units/Compile/: CMakeLists.txt  LexerTest.cpp  ParserTest.cpp
tests/units/Core/: BuiltinTest.cpp  CMakeLists.txt  DiagTest.cpp  FileMgrTest.cpp  SrcMgrTest.cpp
tools/: CMakeLists.txt
tools/driver/: CMakeLists.txt  driver.cpp
tools/stone/: CMakeLists.txt  main.cpp  stone.cpp
verify/syntax/: class.stone  for.stone  fun.stone  ideas.stone  interface.stone  module.stone  space.stone  struct.stone  template.stone  use.stone
