set(LLVM_LINK_COMPONENTS
  BinaryFormat
  Core
  Support
  )

set(stone_core_sources
	ASTContext.cpp
	ASTConsumer.cpp
	ASTScope.cpp
	Builtin.cpp
	Char.cpp
	Comment.cpp
	Decl.cpp
	DeclContext.cpp
	Diagnostics.cpp
	Expr.cpp
	FileMgr.cpp
	FileSystemStatCache.cpp
	Fmt.cpp
	Identifier.cpp
	LLVMCtx.cpp
	Module.cpp
	SrcLoc.cpp
	SrcMgr.cpp
	Stats.cpp
	Stmt.cpp
	Template.cpp
	TextDiagnosticListener.cpp
	TokenKind.cpp
	Type.cpp
	Visitor.cpp
	Version.cpp
	VirtualTable.cpp
	Walker.cpp

)
add_stone_library(StoneCore
	${stone_core_sources}
)
add_subdirectory(test)

